--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,10 +1,13 @@
+# Production Environment Configuration
+# Copy this file to .env.production for production deployment
+
 # API Configuration
-REACT_APP_API_URL=http://localhost:5001/api
-REACT_APP_BASE_URL=http://localhost:5001
-REACT_APP_SOCKET_URL=http://localhost:5001
+REACT_APP_API_URL=https://booking4u-backend.onrender.com/api
+REACT_APP_BASE_URL=https://booking4u-backend.onrender.com
+REACT_APP_SOCKET_URL=https://booking4u-backend.onrender.com
 
 # Environment
-REACT_APP_NODE_ENV=development
+REACT_APP_NODE_ENV=production
 
 # Google Maps API (for location services)
 REACT_APP_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
@@ -41,11 +44,9 @@ REACT_APP_APP_VERSION=1.0.0
 REACT_APP_DEFAULT_LANGUAGE=ar
 REACT_APP_SUPPORTED_LANGUAGES=ar,en
 
-# Development Settings
-REACT_APP_DEBUG=true
+# Production Settings
+REACT_APP_DEBUG=false
 REACT_APP_ENABLE_MOCK_DATA=false
 REACT_APP_ENABLE_LOGGING=true
-
-# Production Settings
-REACT_APP_ENABLE_HTTPS=false
-REACT_APP_ENABLE_PWA=false
+REACT_APP_ENABLE_HTTPS=true
+REACT_APP_ENABLE_PWA=true
