--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -5,11 +5,22 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# Redirect all routes to index.html for React SPA
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+# Environment variables for production
 [context.production.environment]
   REACT_APP_API_URL = "https://booking4u-backend.onrender.com/api"
   REACT_APP_BASE_URL = "https://booking4u-backend.onrender.com"
