--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/your-username/booking4u#readme",
   "dependencies": {
+    "axios": "^1.11.0",
     "mongodb": "^6.19.0"
   }
 }
