--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "analyze": "ANALYZE=true npm run build",
-    "serve": "npx serve -s build -l 3000"
+    "serve": "npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +56,8 @@
     "tailwindcss": "^3.3.3",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.10.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
