Fix Render build issue - missing index.html

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "start": "craco start",
     "build": "craco build",
     "build:standard": "react-scripts build",
+    "build:render": "npm ci && craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "analyze": "ANALYZE=true npm run build",
