--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    buildCommand: cd frontend && npm ci && npm run build
+    buildCommand: cd frontend && npm run build:render
     staticPublishPath: ./frontend/build
     envVars:
       - key: NODE_ENV
