--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    buildCommand: cd frontend && npm ci && npm run build
+    buildCommand: |
+      cd frontend
+      npm ci
+      npm run build
     staticPublishPath: ./frontend/build
     envVars:
       - key: NODE_ENV
