--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,9 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    buildCommand: |
-      cd frontend
-      npm ci
-      npm run build
-    staticPublishPath: ./frontend/build
+    rootDir: frontend
+    buildCommand: npm ci && npm run build
+    staticPublishPath: ./build
     envVars:
       - key: NODE_ENV
         value: production
