--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    rootDir: frontend
-    buildCommand: npm ci && npm run build
-    staticPublishPath: ./build
+    buildCommand: cd frontend && npm ci && npm run build
+    staticPublishPath: ./frontend/build
     envVars:
       - key: NODE_ENV
         value: production
