--- a/render.yaml
+++ b/render.yaml
@@ -2,28 +2,7 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    buildCommand: |
-      echo "=== RENDER BUILD START ==="
-      echo "Current directory: $(pwd)"
-      echo "Listing root contents:"
-      ls -la
-      echo "Checking if frontend directory exists:"
-      ls -la frontend/ || echo "Frontend directory not found!"
-      echo "Changing to frontend directory..."
-      cd frontend
-      echo "Frontend directory contents:"
-      ls -la
-      echo "Checking public directory:"
-      ls -la public/
-      echo "Installing dependencies..."
-      npm ci
-      echo "Building application..."
-      npm run build
-      echo "Build completed. Build directory contents:"
-      ls -la build/
-      echo "Checking if index.html exists in build:"
-      ls -la build/index.html || echo "index.html NOT FOUND in build!"
-      echo "=== RENDER BUILD END ==="
+    buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/build
     envVars:
       - key: NODE_ENV
@@ -34,3 +13,19 @@ services:
         value: https://booking4u-1.onrender.com
       - key: REACT_APP_SOCKET_URL
         value: https://booking4u-1.onrender.com
+  - type: web
+    name: booking4u-backend
+    env: node
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: PORT
+        value: 10000
+      - key: MONGODB_URI
+        value: mongodb+srv://osamagivegh:osamagivegh@cluster0.8qjqj.mongodb.net/booking4u?retryWrites=true&w=majority
+      - key: JWT_SECRET
+        value: your-super-secret-jwt-key-here
+      - key: JWT_EXPIRE
+        value: 30d
