--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public (commented out to allow frontend/public files)
 
 # Storybook build outputs
 .out
