--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,6 @@ docker-compose.yml
 .dockerignore
 
 # Render
-render.yaml
+# render.yaml (commented out to allow deployment configuration)
 # Local Netlify folder
 .netlify
