--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,13 @@ services:
   - type: web
     name: booking4u-frontend
     env: static
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./build
     rootDir: frontend
+    buildCommand: npm install && npm run build
+    publishDir: build
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: NODE_ENV
         value: production
