Update backend environment configuration

--- a/backend/env.production.example
+++ b/backend/env.production.example
@@ -8,7 +8,8 @@ ENABLE_SWAGGER=false
 ENABLE_LOGGING=true
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/booking4u
+MONGODB_URI=MONGODB_URI=mongodb+srv://osamagivegh:990099@cluster0.npzs81o.mongodb.net/booking4u?retryWrites=true&w=majority&appName=Cluster0
+
 DB_MAX_POOL_SIZE=20
 DB_SERVER_SELECTION_TIMEOUT=10000
 DB_SOCKET_TIMEOUT=60000
