--- a/backend/env.production.example
+++ b/backend/env.production.example
@@ -24,7 +24,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=50
 
 # CORS Configuration
-CORS_ORIGIN=https://yourdomain.com
+CORS_ORIGIN=https://booking4u-1.onrender.com
 
 # Logging Configuration
 LOG_LEVEL=warn
