--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: JWT_SECRET
         value: your-super-secret-jwt-key-change-this-in-production
       - key: JWT_EXPIRE
-        value: 30d
+        value: 24h
       - key: JWT_REFRESH_EXPIRE
         value: 7d
       - key: CORS_ORIGIN
@@ -25,15 +25,23 @@ services:
       - key: ENABLE_LOGGING
         value: true
       - key: LOG_LEVEL
-        value: info
+        value: warn
       - key: DEBUG
         value: false
       - key: DB_MAX_POOL_SIZE
-        value: 10
+        value: 20
       - key: DB_SERVER_SELECTION_TIMEOUT
-        value: 5000
+        value: 10000
       - key: DB_SOCKET_TIMEOUT
-        value: 45000
+        value: 60000
+      - key: RATE_LIMIT_WINDOW_MS
+        value: 900000
+      - key: RATE_LIMIT_MAX_REQUESTS
+        value: 50
+      - key: UPLOAD_PATH
+        value: ./uploads
+      - key: MAX_FILE_SIZE
+        value: 10485760
 
 databases:
   - name: booking4u-db
