Add REACT_APP_FRONTEND_URL and update .gitignore for CORS configuration

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ dist/
 */.env.test.local
 */.env.production.local
 
+# Allow .env.production for deployment
+!.env.production
+
 # Logs
 logs/
 *.log
