--- a/backend/package.json
+++ b/backend/package.json
@@ -1,43 +1,28 @@
 {
   "name": "booking4u-backend",
   "version": "1.0.0",
-  "description": "Booking4U Backend API",
+  "description": "نظام حجز المواعيد - الخادم",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["booking", "api", "nodejs", "express", "mongodb"],
-  "author": "Booking4U Team",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "hpp": "^0.2.3",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
-    "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8",
-    "winston": "^3.10.0",
-    "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.19.0",
+    "axios": "^1.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1"
   },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  }
+  "keywords": [
+    "booking",
+    "appointments",
+    "express",
+    "mongodb"
+  ],
+  "author": "Booking4U Team",
+  "license": "MIT"
 }
