Setup GitHub Pages deployment with automatic CI/CD

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -6,6 +6,9 @@ REACT_APP_API_URL=https://booking4u-backend.onrender.com/api
 REACT_APP_BASE_URL=https://booking4u-backend.onrender.com
 REACT_APP_SOCKET_URL=https://booking4u-backend.onrender.com
 
+# Frontend URL (for backend CORS configuration)
+REACT_APP_FRONTEND_URL=https://booking4u-1.onrender.com
+
 # Environment
 REACT_APP_NODE_ENV=production
 
