--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "ANALYZE=true npm run build",
-    "serve": "npx serve -s build"
+    "serve": "npx serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://osamagivegh-hash.github.io/booking4u",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,7 +56,8 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "url-loader": "^4.1.1",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "webpack-bundle-analyzer": "^4.10.2",
+    "gh-pages": "^6.1.1"
   },
   "engines": {
     "node": "18.x"
