--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,13 +16,17 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
         
     - name: Install dependencies
       run: |
         cd frontend
-        npm install
+        npm cache clean --force
+        npm install --no-optional --legacy-peer-deps
+        
+    - name: Verify installation
+      run: |
+        cd frontend
+        npm list --depth=0
         
     - name: Build
       run: |
