--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         cd frontend
+        rm -rf node_modules package-lock.json
         npm cache clean --force
-        npm install --no-optional --legacy-peer-deps
+        npm install --legacy-peer-deps
         
     - name: Verify installation
       run: |
