--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,12 +30,17 @@ jobs:
         rm -rf node_modules package-lock.json
         npm cache clean --force
         NPM_CONFIG_UPDATE_NOTIFIER=false npm install --legacy-peer-deps --no-audit --no-fund --silent
+        echo "Reinstalling react-scripts specifically..."
+        npm install react-scripts@5.0.1 --save
         
     - name: Verify installation
       run: |
         cd frontend
         npm list --depth=0
+        echo "Checking react-scripts installation:"
         ls -la node_modules/react-scripts/
+        echo "React-scripts version:"
+        npm list react-scripts
         cat package.json | grep -A 5 -B 5 "react-scripts"
         echo "Checking for .env files:"
         ls -la .env* || echo "No .env files found"
@@ -54,6 +59,9 @@ jobs:
       run: |
         cd frontend
         rm -rf build
+        echo "Cleaning react-scripts cache..."
+        rm -rf node_modules/.cache
+        rm -rf .cache
         
     - name: Check for syntax errors
       run: |
@@ -70,7 +78,8 @@ jobs:
         echo "Current directory: $(pwd)"
         echo "Contents: $(ls -la)"
         echo "Package.json exists: $(test -f package.json && echo 'YES' || echo 'NO')"
-        CI=false GENERATE_SOURCEMAP=false NPM_CONFIG_UPDATE_NOTIFIER=false npm run build
+        echo "Trying direct react-scripts build..."
+        CI=false GENERATE_SOURCEMAP=false NPM_CONFIG_UPDATE_NOTIFIER=false npx react-scripts build
         
     - name: Check build output
       run: |
