--- a/render.yaml
+++ b/render.yaml
@@ -37,4 +37,4 @@ services:
       - key: JWT_EXPIRE
         value: 30d
       - key: CORS_ORIGIN
-        value: https://booking4u-1.onrender.com
+        value: https://osamagivegh-hash.github.io
