--- a/render.yaml
+++ b/render.yaml
@@ -13,9 +13,9 @@ services:
       - key: NODE_ENV
         value: production
       - key: REACT_APP_API_URL
-        value: https://booking4u-backend.onrender.com/api
+        value: https://booking4u-1.onrender.com/api
       - key: REACT_APP_BASE_URL
-        value: https://booking4u-backend.onrender.com
+        value: https://booking4u-1.onrender.com
       # Frontend URL (for backend CORS configuration)
       - key: REACT_APP_FRONTEND_URL
         value: https://booking4u-1.onrender.com
@@ -37,4 +37,4 @@ services:
       - key: JWT_EXPIRE
         value: 30d
       - key: CORS_ORIGIN
-        value: https://osamagivegh-hash.github.io
+        value: https://booking4u-1.onrender.com
