--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     rootDir: frontend
     buildCommand: npm install && npm run build
     publishDir: build
+    plan: free
     routes:
       - type: rewrite
         source: /*
@@ -25,6 +26,9 @@ services:
     buildCommand: cd backend && npm install
     startCommand: cd backend && npm start
     rootDir: .
+    plan: free
+    healthCheckPath: /api/health
+    autoDeploy: true
     envVars:
       - key: NODE_ENV
         value: production
