Fix frontend build config and backend CORS

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,9 +1,10 @@
 # ===========================
 # API Configuration
 # ===========================
-REACT_APP_API_URL=https://booking4u-1.onrender.com/api
-REACT_APP_BASE_URL=https://booking4u-1.onrender.com
-REACT_APP_SOCKET_URL=https://booking4u-1.onrender.com
+REACT_APP_API_URL=https://booking4u-backend.onrender.com/api
+REACT_APP_BASE_URL=https://booking4u-backend.onrender.com
+REACT_APP_SOCKET_URL=https://booking4u-backend.onrender.com
+REACT_APP_FRONTEND_URL=https://booking4u-1.onrender.com
 
 # ===========================
 # Environment
