--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
         value: https://booking4u-backend.onrender.com/api
       - key: REACT_APP_BASE_URL
         value: https://booking4u-backend.onrender.com
+      - key: REACT_APP_SOCKET_URL
+        value: https://booking4u-backend.onrender.com
       # Frontend URL (for backend CORS configuration)
       - key: REACT_APP_FRONTEND_URL
         value: https://booking4u-1.onrender.com
@@ -41,4 +43,4 @@ services:
       - key: JWT_EXPIRE
         value: 30d
       - key: CORS_ORIGIN
-        value: https://booking4u-frontend.onrender.com
+        value: https://booking4u-1.onrender.com
