--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,18 @@
   "name": "booking4u-backend",
   "version": "1.0.0",
   "description": "نظام حجز المواعيد - الخادم",
-  "main": "server-simple.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server-simple.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "prod": "NODE_ENV=production node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "mongoose": "^8.0.3",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "hpp": "^0.2.3",
     "express-validator": "^7.0.1",
@@ -23,10 +24,10 @@
     "swagger-ui-express": "^5.0.0",
     "swagger-jsdoc": "^6.2.8",
     "winston": "^3.10.0",
-    "express-rate-limit": "^6.10.0",
+    "express-rate-limit": "^7.1.5",
     "compression": "^1.7.4",
     "morgan": "^1.10.0",
-    "axios": "^1.11.0"
+    "axios": "^1.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -35,8 +36,14 @@
     "booking",
     "appointments",
     "express",
-    "mongodb"
+    "mongodb",
+    "render",
+    "production"
   ],
   "author": "Booking4U Team",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
