--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,28 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "axios": "^1.6.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "analyze": "ANALYZE=true npm run build",
-    "serve": "npx serve -s build",
+    "analyze": "npm run build && npx bundle-analyzer build/static/js/*.js",
+    "serve": "npx serve -s build -l 3000",
+    "lint": "eslint src --ext .js,.jsx",
+    "lint:fix": "eslint src --ext .js,.jsx --fix",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -43,7 +45,9 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie > 0",
+      "not ie_mob > 0"
     ],
     "development": [
       "last 1 chrome version",
@@ -52,14 +56,20 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "url-loader": "^4.1.1",
-    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-bundle-analyzer": "^4.10.1",
     "gh-pages": "^6.1.1"
   },
   "engines": {
-    "node": "20.x"
-  }
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "proxy": "http://localhost:10000"
 }
