--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": ".",
+  "homepage": "/",
   "eslintConfig": {
     "extends": [
       "react-app",
