--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm start",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
     "start": "cd backend && npm start",
     "postinstall": "cd backend && npm install",
+    "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
