--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,8 @@ services:
   - type: web
     name: booking4u-integrated
     env: node
-    buildCommand: |
-      cd backend && npm install && 
-      cd ../frontend && npm install && npm run build && 
-      cd ../backend && mkdir -p frontend-build && 
-      cp -r ../frontend/build/* frontend-build/
-    startCommand: cd backend && npm start
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     rootDir: .
     plan: free
     healthCheckPath: /api/health
