--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,23 @@
   "description": "Frontend for Booking4U appointment booking system",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
-    "date-fns": "^2.30.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.18.0",
+    "@tanstack/react-query": "^5.62.8",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.2",
-    "web-vitals": "^2.1.4",
-    "zustand": "^4.4.4"
+    "socket.io-client": "^4.8.1",
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,13 +62,13 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.10.1",
     "gh-pages": "^6.1.1"
