--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "lint": "eslint src --ext .js,.jsx",
     "lint:fix": "eslint src --ext .js,.jsx --fix",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy:github": "npm run build && gh-pages -d build -b gh-pages"
   },
   "homepage": ".",
   "proxy": "http://localhost:10000",
