--- a/.dockerignore
+++ b/.dockerignore
@@ -1,40 +1,34 @@
 # Dependencies
-node_modules/
-*/node_modules/
+node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-build/
-dist/
-*/build/
-*/dist/
-backend/frontend-build/
-
-# Environment variables
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Build outputs
+build
+dist
+.next
+.nuxt
+
 # Logs
-logs/
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
 # Runtime data
-pids/
+pids
 *.pid
 *.seed
 *.pid.lock
 
 # Coverage directory used by tools like istanbul
-coverage/
+coverage
 *.lcov
 
 # nyc test coverage
@@ -103,9 +97,33 @@ temp/
 ehthumbs.db
 Thumbs.db
 
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Documentation
+README.md
+*.md
+
+# Tests
+test
+tests
+__tests__
+*.test.js
+*.spec.js
+
 # Database
 *.db
 *.sqlite
+
+# Uploads
+uploads/
+public/uploads/
 
 # SSL certificates
 *.pem
@@ -113,5 +131,5 @@ Thumbs.db
 *.crt
 
 # Backup files
-*.backup
 *.bak
+*.backup
