--- a/render.yaml
+++ b/render.yaml
@@ -28,9 +28,7 @@ services:
       
       # Database
       - key: MONGODB_URI
-        fromDatabase:
-          name: booking4u-db
-          property: connectionString
+        value: mongodb+srv://osamagivegh:990099@cluster0.npzs81o.mongodb.net/booking4u?retryWrites=true&w=majority&appName=Cluster0
       
       # Security
       - key: JWT_SECRET
@@ -62,7 +60,4 @@ services:
       - key: LOG_FILE
         value: logs/app.log
 
-databases:
-  - name: booking4u-db
-    plan: free
-    region: oregon
+# No local database needed - using MongoDB Atlas
