--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.62.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -15,9 +16,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "@tanstack/react-query": "^5.62.8",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.2"
@@ -68,11 +68,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "url-loader": "^4.1.1",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "gh-pages": "^6.1.1"
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "engines": {
     "node": ">=18.0.0",
