--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,8 +64,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "gh-pages": "^6.1.1",
