--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "booking4u",
   "version": "1.0.0",
   "description": "نظام حجز المواعيد الذكي للمملكة العربية السعودية",
-  "main": "start.js",
+  "main": "backend/server.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm start",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
+    "build": "cd frontend && npm install && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
     "build:render": "npm run install:all && npm run build",
     "start": "cd backend && npm start",
     "postinstall": "cd backend && npm install",
