--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: booking4u-integrated
     env: node
     plan: free
-    buildCommand: npm run build:render
+    buildCommand: npm run build:blueprint
     startCommand: npm start
     envVars:
       - key: NODE_ENV
