FIX: Frontend serving in Blueprint Integrated - enhance build process, add verification, fix render.yaml

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "build": "cd frontend && npm install && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
     "build:render": "npm run install:all && npm run build",
-    "build:blueprint": "cd frontend && npm install && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/ && npm install",
+    "build:blueprint": "npm run install:all && cd frontend && npm run build && cd ../backend && rm -rf frontend-build && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/ && echo 'Frontend build copied successfully' && ls -la frontend-build/",
+    "build:frontend-integrated": "bash build-frontend-integrated.sh",
     "start": "cd backend && npm start",
     "postinstall": "cd backend && npm install",
     "heroku-postbuild": "npm run build",
