--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm run build:blueprint
+    publishDirectory: backend
     startCommand: npm start
     envVars:
       - key: NODE_ENV
