--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "express-rate-limit": "^7.4.1",
     "compression": "^1.7.4",
     "morgan": "^1.10.0",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
