🔧 Fix MongoDB connection and import statement issues

--- a/render.yaml
+++ b/render.yaml
@@ -11,12 +11,16 @@ services:
       - key: RENDER 
         value: true 
       - key: MONGODB_URI 
-        fromDatabase: 
-          name: booking4u-db 
-          property: connectionString 
+        value: mongodb+srv://osamagivegh:990099@cluster0.npzs81o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
       - key: JWT_SECRET 
         generateValue: true 
       - key: PORT 
-        value: 10000 
+        value: 10000
+      - key: CORS_ORIGIN 
+        value: https://booking4u-1.onrender.com
+      - key: ENABLE_SWAGGER 
+        value: false
+      - key: ENABLE_LOGGING 
+        value: true 
     autoDeploy: true 
     branch: main 
