--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "deploy:github": "npm run build && gh-pages -d build -b gh-pages"
   },
   "homepage": ".",
+  "public_url": "./",
   "proxy": "http://localhost:10000",
   "eslintConfig": {
     "extends": [
