--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm start",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm install && npm run build && cd ../backend && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
-    "build:render": "npm install --production=false && cd backend && npm install --production=false && cd ../frontend && npm install --production=false && npm run build && cd ../backend && rm -rf frontend-build && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/",
+    "build": "cd frontend && npm install && npm run build && cd ../backend && rm -rf frontend-build && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/ && echo 'Frontend build copied successfully'",
+    "build:render": "npm install --production=false && cd frontend && npm install --production=false && npm run build && cd ../backend && rm -rf frontend-build && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/ && echo 'Frontend build copied successfully'",
     "build:blueprint": "npm run install:all && cd frontend && npm run build && cd ../backend && rm -rf frontend-build && mkdir -p frontend-build && cp -r ../frontend/build/* frontend-build/ && echo 'Frontend build copied successfully' && ls -la frontend-build/",
     "build:frontend-integrated": "bash build-frontend-integrated.sh",
     "start": "cd backend && npm start",
